--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "mongoose": "^8.12.2",
     "nanoid": "^5.1.5",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "express": "^4.18.2"
   }
 }
