--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "vite",
-        "build": "vite build",
+        "build": "npm run build",
         "dev": "vite"
     },
     "dependencies": {
